# human_benchmark

./: Cargo.toml  README.md
src/: main.rs
src/benchmarks/: aim_trainer.rs  chimp_test.rs  mod.rs  number_memory.rs  reaction_time.rs  sequence_memory.rs  typing.rs  verbal_memory.rs  visual_memory.rs
src/components/: utils.rs
