[package]
    edition="2021"
    name   ="human_benchmark"
    version="0.1.0"

[dependencies]
    anyhow         ="1.0"
    headless_chrome="1.0"
    rayon          ="1.10"
    scraper        ="0.23"
    tokio          ={version="1.0", features=["full"]}

[target.'cfg(windows)'.dependencies]
    winapi={version="0.3", features=[
        "libloaderapi",
        "processthreadsapi",
        "winbase",
        "windef",
        "wingdi",
        "winuser",
    ]}

[profile.release]
    codegen-units  =1
    debug          =false
    lto            ="fat"
    opt-level      =3
    overflow-checks=false
    panic          ="abort"
    strip          =true
